--- a/mobile.css
+++ b/mobile.css
@@ -29,13 +29,19 @@ input:focus{
 }
 
 .btn-success{
-    background-color: yellowgreen;
+    background-color: green;
     padding: 20px 20px;
+    color: white;
 }
 
 .btn-wrong{
-    background-color: tomato;
+    background-color: red;
     padding: 20px 20px;
+    color: white;
+}
+
+.disable{
+    display: none;
 }
 
 #username{
@@ -94,6 +100,10 @@ main{
 }
 
 .card-body{
+    margin: 20px 0;
+}
+
+ul{
     margin: 20px 0;
 }
 
