--- a/css/mobile.css
+++ b/css/mobile.css
@@ -95,7 +95,8 @@ main{
     min-width: 310px;
     display: flex;
     flex-direction: column;
-    padding: 50px 20px;
+    margin-top: 10px;
+    padding: 100px 20px;
     border-radius: 20px;
 }
 
